--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+nav {
+  padding: 16px 32px;
   color: white;
+  font-weight: bold;
+  font-size: larger;
+  background-color: black;
+}
+nav a {
+  margin-right: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+a,
+a:visited {
+  color: inherit;
+}
+.btn-product {
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 50px;
+}
+.product {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.product-item {
+  height: 300px;
+  margin: 20px;
+  width: 300px;
+  font-size: larger;
+  background-color: aliceblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  display: inline-block;
+  width: 800px;
+  margin-top: 0;
+}
+.cart {
+  display: flex;
+  flex-wrap: wrap;
+}
+.cart-item {
+  height: 300px;
+  justify-content: space-around;
+  width: 300px;
+}
+.checkout {
+  background-color: black;
+  color: white;
+  display: inline-block;
+  margin-top: 80px;
+  height: 100%;
+  width: 300px;
+}
+.btn-checkout {
+  background-color: white;
+  color: black;
+  width: 80%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 10%;
+  height: 50px;
 }
